RESOLVED FIXED147147
WinLauncher does not start on WinXP.
https://bugs.webkit.org/show_bug.cgi?id=147147
Summary WinLauncher does not start on WinXP.
peavo
Reported 2015-07-21 07:03:44 PDT
ANGLE requires Win7, we need to disable accelerated compositing on earlier Windows versions. In addition, we need to define PSAPI_VERSION = 1, if we are going to call GetProcessMemoryInfo() on WinXP, see https://msdn.microsoft.com/en-us/library/windows/desktop/ms683219(v=vs.85).aspx.
Attachments
Patch (3.39 KB, patch)
2015-07-21 07:19 PDT, peavo
no flags
peavo
Comment 1 2015-07-21 07:19:18 PDT
peavo
Comment 2 2015-07-21 10:57:02 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 3 2015-07-21 11:41:26 PDT
Comment on attachment 257180 [details] Patch Clearing flags on attachment: 257180 Committed r187109: <http://trac.webkit.org/changeset/187109>
WebKit Commit Bot
Comment 4 2015-07-21 11:41:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.