WinLauncher does not start on WinXP. https://bugs.webkit.org/show_bug.cgi?id=147147

Reviewed by Alex Christensen.

Source/WebCore:

Calling GetProcessMemoryInfo() on WinXP requires that PSAPI_VERSION is set to 1,
see https://msdn.microsoft.com/en-us/library/windows/desktop/ms683219(v=vs.85).aspx.

* WebCore.vcxproj/WebCoreCommon.props:

Source/WebKit/win:

ANGLE requires Win7, accelerated compositing must be disabled on earlier Windows versions.

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::acceleratedCompositingAvailable):


Canonical link: https://commits.webkit.org/165189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187109 268f45cc-cd09-0410-ab3c-d52691b4dbfc